<resources>
    <string name="app_name">BaReGa</string>
    <string name="hello_world">Hello Karthik!</string>
    <string name="start_string">START</string>
    <string name="settings_string">SETTINGS</string>
    <string name="high_scores_string">HIGH SCORES</string>
    <string name="quit_string">QUIT</string>
    <string name="back_string">BACK</string>
    <string name="high_score_column1">NAME</string>
    <string name="high_score_column2">LEVEL</string>
    <string name="high_score_column3">SCORE</string>
    <string name="questionColorText">QUESTION</string>
    <string name="answerColorText">ANSWER</string>
    <string name="scoreText">SCORE</string>
    <string name="levelText">LEVEL</string>
    <string name="chancesLeftText">CHANCES LEFT</string>
    <string name="initial_level">1</string>
    <string name="initial_score">0</string>
    <string name="level_cleared_message">LEVEL CLEARED</string>
    <string name="level_failed_message">LEVEL FAILED</string>
    <string name="new_high_score_message">NEW HIGH SCORE</string>
    <string name="your_score_is">Your score is</string>
    <string name="ok_button_text">OK</string>
    <string name="change_player_name_string">CHANGE PLAYER NAME</string>
    <string name="toggle_sound_on_string">SOUND ON</string>
    <string name="toggle_sound_off_string">SOUND OFF</string>
    <string name="toggle_theme_light_string">LIGHT THEME</string>
    <string name="toggle_theme_dark_string">DARK THEME</string>
    <string name="enable_splash_screen_string">ENABLE SPLASH SCREEN</string>
    <string name="disable_splash_screen_string">DISABLE SPLASH SCREEN</string>
    <string name="reset_high_scores_string">RESET HIGH SCORES</string>
    <string name="next_level">NEXT LEVEL</string>
</resources>