<!-- res/layout/title_screen_layout.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <!-- App Name -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/title_padding"/>

    <!-- Start Button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_string"
        android:background="@color/aqua"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:onClick="startGame"
        android:layout_marginTop="@dimen/button_padding"/>

    <!-- Settings Button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_string"
        android:background="@color/aqua"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:onClick="openSettings"
        android:layout_marginTop="@dimen/button_padding"/>

    <!-- High Scores Button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_scores_string"
        android:background="@color/aqua"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:onClick="viewHighScores"
        android:layout_marginTop="@dimen/button_padding"/>

    <!-- Quit Button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit_string"
        android:background="@color/aqua"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:onClick="quitApp"
        android:layout_marginTop="@dimen/button_padding"/>
</LinearLayout>
