<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/style_screen_page_RelativeLayout">
    <!-- App Name -->
    <TextView
        android:id="@+id/app_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/menu_color"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:padding="@dimen/menu_padding"
        android:text="@string/settings_string"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />
    <!-- Button to change player name -->
    <Button
        android:id="@+id/changePlayerNameButton"
        style="@style/style_button_settings_screen"
        android:onClick="onChangePlayerNameButtonClick"
        android:text="@string/change_player_name_string" />
    <!-- Button to toggle sound on or off -->
    <Button
        android:id="@+id/toggleSoundButton"
        style="@style/style_button_settings_screen"
        android:layout_below="@+id/changePlayerNameButton"
        android:onClick="onToggleSoundClick"
        android:text="@string/toggle_sound_off_string" />
    <!-- Button to toggle theme light or dark -->
    <Button
        android:id="@+id/toggleThemeButton"
        style="@style/style_button_settings_screen"
        android:layout_below="@+id/toggleSoundButton"
        android:onClick="onToggleThemeClick"
        android:text="@string/toggle_theme_dark_string" />
    <!-- Back Button at the bottom -->
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button_color"
        android:onClick="onBackButtonClick"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/back_string" />
</RelativeLayout>
